# keyboard-software-core

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  memory.x
.cargo/: config.toml
src/: bootloader.rs  lib.rs  main.rs  rgb.rs
src/keyboard/: key.rs  keyboard.rs  mod.rs  scanner.rs
src/pio-asm/: leds.pio  tm1637.pio
